# esp32-rust-nostd-temperature-logger

./: Cargo.toml  README.md
.cargo/: config.toml
src/: bmp180.rs  main.rs  socket.rs  tiny_mqtt.rs
