[package]
name    = "esp32_nostd_mqtt"
version = "0.1.0"
authors = ["bjoernQ <bjoern.quentin@mobile-j.de>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[profile.release]
opt-level = "s"

[dependencies]
panic-halt   = "0.2"
esp32-hal = "0.7.0"
xtensa-lx-rt = { version = "0.14.0", features = ["esp32"], optional = true }
xtensa-lx = { version = "0.7.0", features = ["esp32"] }

esp-wifi = { git = "https://github.com/esp-rs/esp-wifi.git", features = ["esp32", "embedded-svc", "wifi"] }
smoltcp = { version = "0.8.0", default-features=false, features = ["proto-igmp", "proto-ipv4", "socket-tcp", "socket-icmp", "socket-udp", "medium-ethernet", "proto-dhcpv4", "socket-raw", "socket-dhcpv4"] }
embedded-svc = { version = "0.23.2", default-features = false }
mqttrust = "0.5.1"
log = "0.4.16"
nb = "1.0.0"
embedded-hal = "0.2"
esp-println = { version = "0.3.1", features = [ "esp32", "uart" ] }
esp-backtrace = { version = "0.4.0", features = [ "esp32", "panic-handler" ] }
embedded-io = "0.3.0"
esp-alloc = {version="0.1.0", features = ["oom-handler"]}
heapless = "0.7.16"

[features]
default = ["rt"]
rt = ["xtensa-lx-rt"]
